# ocs

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: codecov.yml  dependabot.yml  pull_request_template.md
agents/: ocs_plugin_standard.py
clients/: aggregator_ctrl.py  end_agg.py  end_therm_and_agg.py  mult240.py  reg_test.py  rox_calibration.py  smurf_ctrl.py  start_new_therm.py  stop_running_therm.py  test_add_feed.py  therm_and_agg_ctrl.py  thermometry_ctrl.py
controls/: therm_and_agg_ctrl.py
docs/: Makefile  aggregator.rst  api.rst  architecture.rst  cli_tools.rst  conf.py  fake_data.rst  index.rst  influxdb_publisher.rst  installation.rst  intro.rst  lakeshore372.rst  live_monitoring.rst  ocs_web.rst  quickstart.rst  registry.rst  requirements.txt  site_config.rst
example/: Makefile  example-site-config.yaml  example_agent.py  example_ctrl.py  example_ctrl_sync.py  ocs  ocs.cfg  simplified_agent.py
ocs/: __init__.py  _version.py  access.py  agent.py  agent_cli.py  base.py  checkdata.py  client_cli.py  client_http.py  client_t.py  client_wampy.py  matched_client.py  ocs_agent.py  ocs_client.py  ocs_feed.py  ocs_systemd.py  ocs_twisted.py  ocsbow.py  plugin.py  rename.py  site_config.py  testing.py
python/: __init__.py  base.py  client_wampy.py  ocs_agent.py
requirements/: agents.txt  clients.txt  dev.txt  docs.txt  testing.txt
tests/: .coveragerc  README.rst  config.json  default.yaml  docker-compose.yml  ocs-access.yaml  pytest.ini  test_access.py  test_aggregator.py  test_checkdata.py  test_client_cli.py  test_client_http.py  test_crossbar_integration.py  test_influxdb_publisher.py  test_matched_client.py  test_ocs_agent.py  test_ocs_client.py  test_ocs_feed.py  test_ocs_twisted.py  test_ocsbow.py  test_pacemaker.py  test_params.py  test_rename.py  test_site_config.py  test_testing.py  util.py
www/: Dockerfile  monitor.css  (+2 more)
(+231 files in other folders)
